# osi-laba4

./: CMakeLists.txt  README.md
cpp1998/: CMakeLists.txt  receiver.cpp
cpp1998/src/: Sender.cpp
cpp2011/: CMakeLists.txt  receiver.cpp
cpp2011/src/: QueueOperations.cpp  QueueOperations.h  Sender.cpp
cpp2017/: CMakeLists.txt  receiver.cpp
cpp2017/src/: Sender.cpp
test/: QueueOperationsTest.cpp
